apps/k8s/knarr/seer/seer.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seer
  namespace: knarr
  labels:
    app: seer
spec:
  serviceName: seer
  selector:
    matchLabels:
      app: seer
  template:
    metadata:
      labels:
        app: seer
    spec:
      serviceAccountName: seer
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seer
          image: ghcr.io/seerr-team/seerr:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seer-config
---
apiVersion: v1
kind: Service
metadata:
  name: seer
  namespace: knarr
spec:
  type: ClusterIP
  selector:
    app: seer
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seer
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Seer"
    gethomepage.dev/group: "Requests"
    gethomepage.dev/icon: "overseerr.png"
    gethomepage.dev/description: "Media request manager"
spec:
  tls:
  - hosts:
    - seer.yggdrasil.rip
    secretName: seer-tls
  rules:
    - host: seer.yggdrasil.rip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seer
                port:
                  number: 80
